--- a/aboutus.html
+++ b/aboutus.html
@@ -121,21 +121,19 @@
       </div>
       <br>
       <p style="text-align: center;"><strong>¡Te esperamos en Bustarviejo para empezar juntos esta nueva aventura scout!</strong></p>
+      <br>
+      <h2 style="text-align: center;">Colabora</h2>
+      <div class="contenedor-logos">
+        <div class="logo">
+          <img src="img/logo-ayto.png" alt="Logo Ayto. Bustarviejo">
+          <p>Ayto. Bustarviejo</p>
+        </div>
+        <div class="logo">
+          <img src="img/logo-cole.png" alt="Logo Colegio Montelindo">
+          <p>>CEIP Montelindo</p>
+        </div>
+      </div>
     </section>
-    <br>
-    <h2 style="text-align: center;">Colabora</h2>
-    <div class="projects-grid">
-      <div class="section" style="width: 100%;">
-        <img src="img/logo-ayto.png" alt="Logo Ayto. Bustarviejo" style="width: 100; height: auto;">
-        <h2 style="text-align:center">Ayto. Bustarviejo</h2>
-        <!--<button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>-->
-      </div>
-      <div class="section" style="width: 100%;">
-        <img src="img/logo-cole.png" alt="Logo Colegio Montelindo" style="width: 300px; height: auto;">
-        <h2 style="text-align:center">CEIP Montelindo</h2>
-        <!--<button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>-->
-      </div>
-    </div>
   </main>
 
   <footer id="contact">
