--- a/aboutus.html
+++ b/aboutus.html
@@ -130,7 +130,7 @@
         </div>
         <div class="logo">
           <img src="img/logo-cole.png" alt="Logo Colegio Montelindo">
-          <p>>CEIP Montelindo</p>
+          <p>CEIP Montelindo</p>
         </div>
       </div>
     </section>
