--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <span>Empezamos en <strong>octubre de 2026</strong></span>
       </div>
       <br>
-      <h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>
+      <!--<h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>-->
+      <div class="bloque-foto">
+        <img src="cartel-scout.jpg" alt="Cartel búsqueda monitores">
         <p>
             ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
@@ -48,6 +50,8 @@
             muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
             que acompañarás, sino también la tuya.
         </p>
+      </div>
+      
 
       <h2>¿Por qué hacer voluntariado con nosotros?</h2>
         <p>
