--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <br>
       <!--<h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>-->
       <div class="bloque-foto">
-        <img src="cartel-scout.jpg" alt="Cartel búsqueda monitores">
+        <img src="img/cartel-scout.jpg" alt="Cartel búsqueda monitores">
         <p>
             ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
