--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="bloque-foto">
         <img src="img/cartel-scout.jpg" alt="Cartel búsqueda monitores">
         <p>
-            ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
+            ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y al menos 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
             ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
