--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       </div>
       <br>
       <!--<h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>-->
-      <div class="bloque-foto">
-        <img src="img/cartel-scout.jpg" alt="Cartel búsqueda monitores">
+      <!--<div class="bloque-foto">-->
+        <img src="img/cartel-scout.jpg" style="display:block; margin: 0 auto; width: 300px; height: auto;" alt="Cartel búsqueda monitores">
         <p>
             ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y al menos 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
@@ -50,8 +50,7 @@
             muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
             que acompañarás, sino también la tuya.
         </p>
-      </div>
-      
+      <!--</div>-->
 
       <h2>¿Por qué hacer voluntariado con nosotros?</h2>
         <p>
