--- a/apuntate.html
+++ b/apuntate.html
@@ -66,7 +66,7 @@
   <div id="popupMonitor" class="popup">
     <button onclick="closePopup('popupMonitor')">✖</button>
     <h2>Inscripción scouter</h2>
-    <p>Requisitos: tener al menos 21 años y el título de Monitor/a de Ocio y Tiempo Libre.</p>
+    <p>Requisitos: tener al menos 18 años y, recomendable, el título de Monitor/a de Ocio y Tiempo Libre.</p>
     <form action="https://formspree.io/f/mzdbobba" method="POST">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="email" placeholder="Email" required>
