--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <br>
       <!--<h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>-->
       <!--<div class="bloque-foto">-->
-        <img src="img/cartel-scout.jpg" style="display:block; margin: 0 auto; width: 300px; height: auto;" alt="Cartel búsqueda monitores">
+        <img src="img/cartel-scout.jpg" style="max-width: 500px; width: 100%; height: auto;" alt="Cartel búsqueda monitores">
         <br>
         <p>
-            ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y al menos 21 años? ¿Te apasiona la 
-            naturaleza y quieres ser parte de una aventura educativa única?
-            ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
+            ¿Tienes 18 años? ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? Y si, además, tienes el título de Monitor de Ocio y Tiempo Libre, podrás ser responsable de la sección que coordines en las salidas y campamentos que realizaremos a lo largo del año.
+        </p>
+        <p> El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
             muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
             que acompañarás, sino también la tuya.
