--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="img/cartel-scout.jpg" style="max-width: 500px; width: 100%; height: auto;" alt="Cartel búsqueda monitores">
         <br>
         <p>
-            ¿Tienes 18 años? ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? Y si, además, tienes el título de Monitor de Ocio y Tiempo Libre, podrás ser responsable de la sección que coordines en las salidas y campamentos que realizaremos a lo largo del año.
+            ¿Tienes al menos 18 años? ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única? Y si, además, tienes el título de Monitor de Ocio y Tiempo Libre, podrás ser responsable de la sección que coordines en las salidas y campamentos que realizaremos a lo largo del año. O si lo que quieres es hacer las prácticas de monitor en un entorno idílico, este es tu sitio.
         </p>
         <p> El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
@@ -107,7 +107,7 @@
 
       <h2>¿Estás listo/a para ser parte de una aventura educativa única?</h2>
         <p>
-            Si tienes 21 años o más y la titulación de Monitor/a de Ocio y Tiempo Libre, y estás buscando una experiencia transformadora que combine la naturaleza, la educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
+            Si tienes al menos 18 años y estás buscando una experiencia transformadora que combine la naturaleza, la educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad. Y si, además, posees ya el título de Monitor/a de Ocio y Tiempo Libre, podrás ser el responsable de tu sección de cara a las salidas y campamentos que hagamos. O si quieres hacer las prácticas de dicho título con nosotros, este es también tu sitio.
             ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
         </p>
 
