--- a/aboutus.html
+++ b/aboutus.html
@@ -132,6 +132,10 @@
           <img src="img/logo-cole.png" alt="Logo Colegio Montelindo">
           <p>CEIP Montelindo</p>
         </div>
+        <div class="logo">
+          <img src="img/logo-piv.png" alt="Logo Punto Información Voluntariado">
+          <p>Punto Información Voluntariado</p>
+        </div>
       </div>
     </section>
   </main>
